(rule
 (alias gospel-check)
 (deps
  (:model (glob_files model/*.mli))
  (:mli
   (glob_files libs/eventchn/*.mli)
   (glob_files libs/mmap/*.mli)
   (glob_files libs/xb/*.mli)
;   (glob_files libs/xc/*.mli)
   (glob_files libs/xentoollog/*.mli)
;   (glob_files libs/xs/*.mli)
; (glob_files xenstored/*.mli)
  )
 )
 (action (run gospel check %{model} %{mli})))

 (rule
 (with-stdout-to eventchn_rtac.ml (run %{dep:model/ortac-wrap.sh} %{dep:libs/eventchn/xeneventchn.mli})))

(rule
(with-stdout-to xeneventchn_test.ml (echo "include Xeneventchn")))

 (test
 (name eventchn_rtac)
 (libraries xen.eventchn ortac-runtime-monolith)
 )
