(rule
 (alias gospel-check)
 (deps
  (:model (glob_files model/*.mli))
  (:mli
   (glob_files libs/eventchn/*.mli)
   (glob_files libs/mmap/*.mli)
   (glob_files libs/xb/*.mli)
;   (glob_files libs/xc/*.mli)
   (glob_files libs/xentoollog/*.mli)
   xenstored/bounded.mli
;   (glob_files libs/xs/*.mli)
; (glob_files xenstored/*.mli)
  )
 )
 (action (run gospel check %{model} %{mli})))

 (rule
 (targets event_test_rtac.ml event_test_test.mli)
 (deps (:model (glob_files model/*.mli)))
 (action
 (run %{dep:model/ortac-wrap.sh} %{dep:libs/eventchn/xeneventchn.mli} %{dep:event_test.mli})))

 ;(test
 ;(name event_test_rtac)
 ;(libraries xen.eventchn ortac-runtime-monolith)
 ;)

 (rule
  (alias cameleer-check)
  (action (run cameleer %{dep:xenstored/bounded.ml} --prover=cvc4-ce --batch)))
