(lang dune 2.1)

(name xen)

(formatting disabled)
(generate_opam_files true)

(maintainers lindig@gmail.com)
(license LGPL)

(package
 (name xen)
 (synopsis "Xen interfaces")
 (depends
  base-unix
  (dune (and (>= 2.0) :build))
 )
)

(package
 (name xenstored)
 (synopsis "In-memory key-value store for the Xen hypervisor")
 (depends
  base-unix
  (dune (and (>= 2.0) :build))
 )
)
