(lang dune 2.1)

(name xen)

(generate_opam_files true)

(maintainers christian.lindig@citrix.com)
(license LGPL)

(package
 (name xen)
 (synopsis "Xen interfaces")
 (depends
  base-unix
  (dune (>= 2.1))
 )
)

(package
 (name xenstored)
 (synopsis "In-memory key-value store for the Xen hypervisor")
 (depends
  base-unix
  (ocaml (>= 4.02.3))
  (dune (>= 2.1))
  (bechamel (and (>= 0.3) :with-test))
  (bechamel-notty (and (>= 0.3) :with-test))
  (ocaml_intrinsics (and (>= v0.15.0) :with-test))
 )
)
