(executable
 (modes native)
 (name xenstored)
 (modules (:standard \ syslog systemd))
 (public_name oxenstored)
 (package xenstored)
 (flags (:standard -w -52))
 (libraries unix xen.bus xen.mmap xen.ctrl xen.eventchn xenstubs))

(library
 (foreign_stubs
  (language c)
  (names syslog_stubs systemd_stubs select_stubs)
  (flags (:standard -DHAVE_SYSTEMD (:include cflags.inc))))
 (modules syslog systemd)
 (name xenstubs)
 (wrapped false)
 (libraries unix)
 (no_dynlink)
 (c_library_flags -lsystemd (:include libs.inc)))
