; choose implementation based on 32-bit/64-bit of target
; a different mli is needed due to `private int` on 64-bit

(library
 (name tracer_core)
 (libraries
  uint62
  (select
   timestamp.ml
   from
   ;   (tracer_intrinsics -> timestamp.intrinsics.ml)
   (tracer_monotonic -> timestamp.monotonic.ml)
   (tracer_unix -> timestamp.unix.ml))))
