(library
  (name tracedebug)
  (modules tracedebug times)
  (foreign_stubs (language c) (names clock_stubs))
  (libraries
  (select times.ml from
   (ocaml_xintrinsics -> times.intrinsics.ml)
   (unix -> times.unix.ml)
   (threads.posixx -> times.clock.ml)
  )))

(test 
  (name tracedebug_test)
  (modes native)
  (modules tracedebug_test)
  (libraries tracedebug memtrace))
