; enabled_if with ocaml_version only present since dune 2.5

(rule
 (targets float.ml)
 (enabled_if
  (< %{ocaml_version} 4.08))
 (action
  (copy float.compat.ml float.ml)))

(rule
 (targets atomic.ml)
 (enabled_if
  (< %{ocaml_version} 5.0))
 ; present since 4.12 but only really needed since 5
 (action
  (copy atomic.compat.ml atomic.ml)))

(rule
 (targets atomic.mli)
 (enabled_if
  (< %{ocaml_version} 5.0))
 ; present since 4.12 but only really needed since 5
 (action
  (copy atomic.compat.mli atomic.mli)))

(library
 (name tracedebug_times)
 (modes native)
 (libraries
  (select
   times.ml
   from
   (bechamel.monotonic_clock ocaml_intrinsics unix -> times.intrinsics.ml)
   (bechamel.monotonic_clock threads.posix -> times.clock.ml) ; always available, can be disabled for comparison by commenting out
   (unix -> times.unix.ml))))
